# doqtoq

./: .env.example  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.conda  Dockerfile.venv  LICENSE.md  MANIFEST.in  Makefile  NOTICE  README.md  SECURITY.md  activate_doqtoq.sh  docker-compose.yml  environment.yaml  install.sh  install_qdrant.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  start_app.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.streamlit/: config.toml
alternatives/: streaming_queue_multithreaded.py
app/: __init__.py  chat.py  config.py  main.py  sidebar.py  streaming_queue.py  styles.py  uploader.py  utils.py
backend/: __init__.py  chunker.py  embedder.py  llm_wrapper.py  rag_engine.py  retriever.py  utils.py
backend/prompts/: off_topic_detection_prompt.md  off_topic_prompt.md  prompt_injection_response.md  prompt_templates.py  system_prompt.md
backend/vectorstore/: __init__.py  base.py  chroma_db.py  config.py  factory.py  migrations.py  qdrant_db.py  vector_db.py
data/sample_docs/: special_relativity_intro.md
data/uploads/: .gitkeep
data/vectorstore/: .gitkeep
docs/: API.md  DEPLOYMENT.md  FUTURE_ROADMAP.md  LEARN.md  PHILOSOPHY.md  README.md  RELEASE_GUIDE.md
tests/: streaming_performance_report_20250609_115216.json  test_rag_engine.py
utils/: __init__.py  logging_method.py  suppress_warnings.py  torch_compatibility.py
